# income_expense_forecast

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.ipynb
data/: transaction_types.csv
models/: CatBoost_Difference.cbm  CatBoost_Outcome.cbm  LinReg_Difference.joblib  LinReg_Inсome.joblib  LinReg_Outcome.joblib
predictions/: CatBoost_Difference.txt  CatBoost_Inсome.txt  CatBoost_Outcome.txt  LinReg_Difference.txt  LinReg_Inсome.txt  LinReg_Outcome.txt
src/: CatBoost_Inсome  LinReg_Inсome  dataset.py  main.py  model.py  predict.py  settings.py  train.py
src/catboost_info/: catboost_training.json  test_error.tsv  time_left.tsv
src/catboost_info/test/: events.out.tfevents
src/mlruns/0/: meta.yaml
src/mlruns/0/021a54f97d614c05894281ce3ba8f12c/: meta.yaml
src/mlruns/0/05da8dd6280f4b8a92ad3bfc6c54c5ff/: meta.yaml
src/mlruns/0/18ea280a19b14f41bb672625cc565a91/: meta.yaml
storage/: list_of_unique_users.pkl  scaler_column_agent_Bank Account.joblib  scaler_column_agent_Card.joblib  scaler_column_agent_Partner.joblib  scaler_column_amount_n26_currency.joblib  scaler_column_mcc_explanation_ATM.joblib  scaler_column_transaction_type_Cash26 deposit.joblib  scaler_column_transaction_type_Cash26 withdrawal.joblib  scaler_column_transaction_type_Credit Transfer.joblib  scaler_column_transaction_type_Debit Reversal.joblib  scaler_column_transaction_type_Debit Transfer.joblib  scaler_column_transaction_type_Direct Debit.joblib  scaler_column_transaction_type_MoneyBeam Transfer.joblib  scaler_column_transaction_type_Transferwise Transaction.joblib
(+37 files in other folders)
